# HIP-4-Outcome-Markets

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
executor/: .dockerignore  Cargo.toml  Dockerfile
executor/src/: actions.rs  client.rs  config.rs  ipc.rs  lib.rs  main.rs  nonce.rs  reconcile.rs  risk.rs  signer.rs  state.rs
executor/tests/: testnet_integ.rs
scripts/: fetch_hl.py  render_animated_gif.py  render_screenshots.py  smoke.py
src/: app.py  config.py  contracts.py  data_loader.py  executor_client.py  feed.py  hl_client.py  hl_ws.py  logging_config.py  pricing.py  rate_limit.py  signal_emitter.py  simulator.py  statarb.py  surface.py
tests/: test_executor_client.py  test_feed.py  test_pricing.py  test_rate_limit.py  test_statarb.py
