[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip4-alpha-surface"
version = "0.2.0"
description = "Animated alpha/arbitrage surface for Hyperliquid HIP-4 outcome markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gelatotrade" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "plotly>=5.22",
    "dash>=2.17",
    "python-dateutil>=2.9",
    "kaleido>=1.0",
    "Pillow>=10.0",
    "imageio>=2.34",
    "gunicorn>=22.0",
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
]

[project.scripts]
hip4-dashboard = "src.app:main"
hip4-render-gif = "scripts.render_animated_gif:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = [
    "E501",   # line length handled by formatter
    "PLR0913", # too many args (signal/feed have many tunables)
    "PLR2004", # magic numbers (lots of pricing constants)
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
