[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip4-alpha-surface"
version = "0.2.0"
description = "Animated alpha/arbitrage surface for Hyperliquid HIP-4 outcome markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gelatotrade" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "plotly>=5.22",
    "dash>=2.17",
    "python-dateutil>=2.9",
    "kaleido>=1.0",
    "Pillow>=10.0",
    "imageio>=2.34",
    "gunicorn>=22.0",
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
]

[project.scripts]
hip4-dashboard = "src.app:main"
hip4-render-gif = "scripts.render_animated_gif:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = [
    "E501",    # line length handled by formatter
    "E701",    # one-line `for x: pass` is fine in tiny test loops
    "E702",    # ditto for `;`-joined imports inside renderer scaffolding
    "PLR0913", # too many args (signal / feed have many tunables)
    "PLR2004", # magic numbers (lots of pricing constants)
    "PLR0912", # too many branches in feed.snapshot — intentional dispatch
    "PLR0915", # too many statements in feed.snapshot
    "PLR1714", # comparing in chains (test fixtures)
    "PLR1736", # unnecessary-list-index-lookup (test ergonomics)
    "PLW2901", # loop variable rebinding (parser hot loops)
    "PLC0415", # local imports (used to break circular imports between sim ↔ pricing)
    "SIM105",  # suppressible-exception — explicit `try/except: continue` reads cleaner
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
