[package]
name = "hip4-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hyperliquid HIP-4 execution daemon — EIP-712 signed order submission with risk gates"

[[bin]]
name = "executor"
path = "src/main.rs"

[lib]
name = "executor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
tiny-keccak = { version = "2", features = ["keccak"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
hex = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
warp = "0.3"
parking_lot = "0.12"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
